# construct-cost-ai

./: .env.example  .gitignore  .gitmodules  Consolidated.xlsx  DF_LONG.xlsx  DF_WIDE.xlsx  LICENSE  MatchFuzzy.xlsx  NLPU.xlsx  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  matched.xlsx  merged_df.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  settings.toml  unmatched.xlsx  verify_installation.py
app/: streamlit_app.py
cli/: main.py
data/: sample_padrao1.xlsx  sample_padrao2_fg.xlsx  sample_padrao2_japj.xlsx
data/orcamentos/: sample_padrao1.xlsx  sample_padrao2_ello_nu_nordeste.xlsm  sample_padrao2_japj.xlsx
data/outputs/: 01_BASE_RESULTADO_ORCAMENTOS_CONCATENADOS.xlsx  02_BASE_RESULTADO_VALIDADOR_LPU.csv  02_BASE_RESULTADO_VALIDADOR_LPU.xlsx  DF_MERGE_BUDGET_METADATA_AGENCIAS_CONSTRUCTORS_LPU.xlsx  PRE_CALCULATE_LPU_DISCREPANCIES.xlsx
docs/: ARCHITECTURE.md  CHANGELOG_EXPORTS.md  CHECKLIST_EXPORTS.md  DEVELOPMENT.md  EXPORT_REPORTS.md  INDEX.md  QUICKSTART_EXPORTS.md  README_EXPORTS.md  SUMMARY_EXPORTS.md  VALIDADOR_LPU.md  VALIDADOR_LPU_SUMMARY.md
examples/: api_request.json  main_backtest.py  quickstart_validador_lpu.py  test_exports.py  test_validador_lpu.py  test_validador_lpu_old_backup.py
examples/api/: sample_budget.json
examples/backtest/: main_backtest budget_reader.py  main_backtest.py  main_backtest_budget_reader_.py  main_backtest_validator_lpu.py
output/: multi_sheet.xlsx  single_sheet.xlsx
outputs/: 01_BASE_RESULTADO_ORCAMENTOS_CONCATENADOS.xlsx  budget_tables_concatenated.xlsx  relatorio_completo_validacao_lpu.xlsx  relatorio_validacao_lpu.html  validacao_lpu.csv  validacao_lpu.xlsx
tests/: conftest.py  test_api.py  test_orchestrator.py  test_validators.py
(+115 files in other folders)
